Fix overflow of the user

--- a/components/common/BoardEditor/focalboard/src/components/properties/user/user.scss
+++ b/components/common/BoardEditor/focalboard/src/components/properties/user/user.scss
@@ -1,6 +1,5 @@
 .UserProperty {
     margin-right: 20px;
-    min-width: 120px;
     display: flex;
     align-items: center;
 
